force-app/main/default/objects/SupportedObject__mdt/SupportedObject__mdt.object-meta.xml
<CustomObject>
    <description>This is a protected metadata to store list of object that can be bundeled in an extension pack</description>
    <label>Supported Object</label>
    <pluralLabel>Supported Objects</pluralLabel>
</CustomObject>