force-app/main/default/objects/SupportedObject__mdt/fields/ExternalIdField__c.field-meta.xml
<CustomField>
    <fullName>ExternalIdField__c</fullName>
    <description>This is the External Id field of the selected SObject.</description>
    <inlineHelpText>This is the External Id field of the selected SObject.</inlineHelpText>
    <label>ExternalId Field</label>
    <metadataRelationshipControllingField>SupportedObject__mdt.SObject__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>SupportedObjects</relationshipLabel>
    <relationshipName>SupportedObjects</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>