force-app/main/default/objects/SupportedObject__mdt/fields/IsExposed__c.field-meta.xml
<CustomField>
    <fullName>IsExposed__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Clear this checkbox if you do not want this object to be visible in the Extension configuration tab.</description>
    <inlineHelpText>Clear this checkbox if you do not want this object to be visible in the Extension configuration tab.</inlineHelpText>
    <label>Is Exposed</label>
    <type>Checkbox</type>
</CustomField>