force-app/main/default/objects/SupportedObject__mdt/fields/SObject__c.field-meta.xml
<CustomField>
    <fullName>SObject__c</fullName>
    <description>Name of the SObject available for packaging.</description>
    <inlineHelpText>Name of the SObject available for packaging.</inlineHelpText>
    <label>SObject</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>SupportedObjects</relationshipLabel>
    <relationshipName>SupportedObjects</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
    <unique>true</unique>
</CustomField>